--- a/style.css
+++ b/style.css
@@ -9,7 +9,15 @@
   box-sizing: border-box;
 }
 
-
+body {
+  background-color: #3494e4;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
 
 h1 {
   margin: 10px 0 0;
